--- a/_layouts/topic.html
+++ b/_layouts/topic.html
@@ -124,8 +124,16 @@ layout: post
   {% endif %}
 
   <br>{{newline}}{{newline}}
-<span class="float-left" markdown="1">**Previous Topic:**<br>{{prev_link}}</span>
-<span class="float-right" markdown="1">**Next Topic:**<br>{{next_link | default: first_link }}</span>
+<p class="float-left" markdown="1">
+
+**Previous Topic:**<br>{{prev_link}}
+
+</p>
+<p class="float-right" markdown="1">
+
+**Next Topic:**<br>{{next_link | default: first_link }}
+
+</p>
 
   {:.center}
   [Edit page]({{gh_base}}/edit/master/{{page.path}})<br>
