URL update: localize about, workshops, and internal/sources

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,10 +20,10 @@
         </label>
 
         <div class="trigger">
-            <a class="page-link" href="/about/">About</a>
+            <a class="page-link" href="/en/about/">About</a>
             <a class="page-link" href="/en/publications/">Publications</a>
             <a class="page-link" href="/en/topics/">Topics</a>
-            <a class="page-link" href="/workshops/">Workshops</a>
+            <a class="page-link" href="/en/workshops/">Workshops</a>
             <a class="page-link" href="/en/compatibility/">Compatibility</a>
             <a class="page-link" href="https://dashboard.bitcoinops.org/">Dashboard</a>
         </div>
